Fixed code wrap issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -802,12 +802,14 @@ blockquote {
 pre {
   padding: 1rem 2rem;
   overflow-x: auto;
+  white-space: pre-wrap
 }
 
 pre code {
   border: 0;
   padding-right: 0;
   padding-left: 0;
+  white-space: pre-wrap
 }
 
 .wrapper {
